2015-09-05  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* First public release (0.1)

