@@ -1,4 +1,4 @@
-rockyTlsTester AUTHORS -- Information about the authors.
+tlsprobe AUTHORS -- Information about the authors.
 
 Marco Bellaccini (marco.bellaccini[at!]gmail.com)
 
