@@ -1,5 +1,9 @@
+2015-09-06  Marco Bellaccini <marco.bellaccini[at!]gmail.com>
+
+	* Renamed project
+
 2015-09-05  Marco Bellaccini <marco.bellaccini[at!]gmail.com>
 
-	* First public release (0.1)
+	* First public version
 
 
